--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^11.5.0",
     "framer-motion": "^12.5.0",
+    "jsqr": "^1.4.0",
     "next": "15.2.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-qr-code": "^2.0.15"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
