--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/aframe": "^1.2.8",
     "aframe": "^1.7.1",
     "firebase": "^11.5.0",
+    "firebase-admin": "^13.2.0",
+    "firebase-functions": "^6.3.2",
     "framer-motion": "^12.5.0",
     "jsqr": "^1.4.0",
     "leaflet": "^1.9.4",
@@ -34,6 +36,6 @@
     "eslint": "^9.24.0",
     "eslint-config-next": "15.2.3",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5.8.3"
   }
 }
